Created the skeleton of a new project

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,364 +1,9 @@
 * {
-    margin        : 0;
-    padding       : 0;
-    font-family   : sans-serif;
-    letter-spacing: 3px;
-    line-height: 1.5em;
-    font-weight   : 500;
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
 }
 
-img {
-    max-width: 100%;
-    padding  : 0;
-}
-
-body {
-    overflow-x: hidden;
-    background-color: $bg_color;
-}
-
-
-// image_hover color selector
-
-$ihc_border: $fontA;
-// border color
-$ihc_text  : $fontA;
-// text color
-$ihc_textbg: $fontB;
-// text background color
-$ihc_mask  : #d10c0ca8;
-
-// Image mask layout
-// 
-// <div class="shell">
-//      <img>
-//      <div class="mask">
-//          <h2>
-//          <p>
-//          <a class="info">
-//      </div>
-// </div>
-
-
-@mixin image_hover($width, $height) {
-
-    .shell {
-        width      : $width;
-        border     : 2px solid $ihc_border;
-        overflow   : hidden;
-        position   : relative;
-        text-align : center;
-        display    : grid;
-        place-items: center;
-    }
-
-    .shell .mask {
-        width           : 100%;
-        height          : 100%;
-        position        : absolute;
-        display         : grid;
-        place-items     : center;
-        overflow        : hidden;
-        top             : 0;
-        left            : 0;
-        opacity         : 1;
-        background-color: $ihc_mask;
-        transition      : all 0.4s ease-in-out;
-    }
-
-    .shell img {
-        display   : block;
-        position  : relative;
-        width     : $width;
-        transform : scale(1.1);
-        transition: all 0.2s linear;
-    }
-
-    .shell h2 {
-        display       : inline-block;
-        color         : $ihc_text;
-        position      : relative;
-        font-size     : 1em;
-        font-weight   : 800;
-        // padding    : 5px;
-        align-self    : end;
-        opacity       : 1;
-        // text-align: right;
-        transition    : all 0.2s ease-in-out;
-        text-shadow   : 0px 0px 0px $fontA;
-        justify-self  : end;
-        right         : calc(50% - 36.5px);
-    }
-
-    .shell p {
-        font-style : italic;
-        font-size  : .6em;
-        position   : relative;
-        color      : $ihc_text;
-        opacity    : 1;
-        transition : all 0.2s linear;
-        padding    : 0px 5px;
-        font-weight: 600;
-    }
-
-    .shell h3 {
-        position   : relative;
-        display    : inline-block;
-        width      : 100%;
-        padding    : 5px 0px;
-        font-size  : .6em;
-        background : $ihc_textbg;
-        color      : $ihc_text;
-        opacity    : .75;
-        align-self : start;
-        transition : all 0.2s ease-out;
-        text-shadow: 0px 0px 0px $fontA;
-        font-weight: 700;
-    }
-
-    .shell:hover img {
-        transform: scale(1);
-    }
-
-    .shell:hover .mask {
-        background-color: $transparent;
-    }
-
-    .shell:hover {
-        border     : .5px solid $fontB;
-    }
-
-    .shell:hover h2 {
-        // justify-self: end;
-        color      : $fontB;
-        font-size  : 1.1em;
-        text-shadow: 1px 1px 3px $fontA;
-        text-align : right;
-        right      : 2px;
-    }
-
-    .shell:hover p {
-        opacity         : 0;
-        transition-delay: 0.1s;
-    }
-
-    .shell:hover h3 {
-        text-shadow        : 1px 1px 3px $fontA;
-        color              : $fontB;
-        background         : $transparent;
-        // transition-delay: 0.2s;
-        font-weight        : 900;
-        font-size: .7em;
-        // text-align         : left;
-    }
-
-}
-
-@mixin scroll_up($right, $bottom) {
-    #up {
-        position: fixed;
-        width   : 40px;
-        right   : $right;
-        bottom  : $bottom;
-        opacity : .3;
-        z-index : 3;
-    }
-
-}
-
-
-// index photo transitions
-@keyframes photo_transition {
-    0% {
-        opacity: 100%;
-    }
-
-    20% {
-        opacity: 100%;
-    }
-
-    25% {
-        opacity: 0%;
-    }
-
-    50% {
-        opacity: 0%;
-    }
-
-    75% {
-        opacity: 0%;
-    }
-
-    90% {
-        opacity: 0%;
-    }
-
-    98% {
-        opacity: 100%;
-    }
-
-    100% {
-        opacity: 100%;
-    }
-}
-
-@keyframes photo_transition1 {
-    0% {
-        opacity: 0%;
-    }
-
-    15% {
-        opacity: 0%;
-    }
-
-    23% {
-        opacity: 100%;
-    }
-
-    45% {
-        opacity: 100%;
-    }
-
-    50% {
-        opacity: 0%;
-    }
-
-    75% {
-        opacity: 0%;
-    }
-
-    100% {
-        opacity: 0%;
-    }
-}
-
-@keyframes photo_transition2 {
-    0% {
-        opacity: 0%;
-    }
-
-    25% {
-        opacity: 0%;
-    }
-
-    40% {
-        opacity: 0%;
-    }
-
-    48% {
-        opacity: 100%;
-    }
-
-    70% {
-        opacity: 100%;
-    }
-
-    75% {
-        opacity: 0%;
-    }
-
-    100% {
-        opacity: 0%;
-    }
-}
-
-@keyframes photo_transition3 {
-    0% {
-        opacity: 0%;
-    }
-
-    25% {
-        opacity: 0%;
-    }
-
-    50% {
-        opacity: 0%;
-    }
-
-    65% {
-        opacity: 0%;
-    }
-
-    73% {
-        opacity: 100%;
-    }
-
-    95% {
-        opacity: 100%;
-    }
-
-    100% {
-        opacity: 0%;
-    }
-}
-
-@keyframes open {
-    0% {
-        width : 1%;
-        height: 3%;
-    }
-
-    55% {
-        width : 80%;
-        height: 3%;
-    }
-
-    100% {
-        width : 80%;
-        height: 40%;
-    }
-}
-
-@keyframes photo_carousel {
-    0% {
-        opacity: 1;
-    }
-
-    33% {
-        opacity: 0;
-    }
-
-    66% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes photo_carousel1 {
-    0% {
-        opacity: 0;
-    }
-
-    33% {
-        opacity: 1;
-    }
-
-    66% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes photo_carousel2 {
-    0% {
-        opacity: 0;
-    }
-
-    33% {
-        opacity: 0;
-    }
-
-    66% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
+img, iframe {
+max-width: 100%;
 }
