--- a/css/style.scss
+++ b/css/style.scss
@@ -1,183 +1,4 @@
-@import 'color';
-@import 'global';
-
-body {
-    position: relative;
-    overflow: hidden;
-}
-
-.body {
-    position        : relative;
-    display         : grid;
-    justify-items   : center;
-    align-items     : start;
-    min-height      : 100vh;
-    z-index         : 1;
-    background-color: rgba(0, 0, 0, 0.411);
-    overflow        : hidden;
-
-    >div {
-        place-self : center;
-        text-align : center;
-        color      : $fontA;
-        display    : grid;
-        place-items: center;
-        row-gap    : 10px;
-        height     : 80vh;
-
-        >a {
-            font-weight: 200;
-        }
-    }
-
-    .address {
-        text-decoration: none;
-        color          : $fontA;
-    }
-}
-
-.logo {
-    position      : relative;
-    width         : 170px;
-    padding-bottom: 5vh;
-}
-
-.phone {
-    display        : grid;
-    grid-auto-flow : column;
-    color          : white;
-    text-decoration: none;
-
-    img {
-        height: 25px;
-    }
-}
-
-.bg_images {
-    >img {
-        position  : absolute;
-        top       : 0px;
-        left      : 0px;
-        height    : 100%;
-        width     : 100%;
-        object-fit: cover;
-        z-index   : 0;
-        transition: all .2s ease-in-out;
-    }
-
-    :nth-child(1) {
-        animation: photo_transition 40s infinite;
-    }
-
-    :nth-child(2) {
-        animation: photo_transition1 40s infinite;
-    }
-
-    :nth-child(3) {
-        animation: photo_transition2 40s infinite;
-    }
-
-    :nth-child(4) {
-        animation: photo_transition3 40s infinite;
-    }
-}
-
-nav {
-    display       : grid;
-    grid-auto-flow: column;
-    place-items   : center;
-    column-gap    : 20px;
-    max-width     : 90vw;
-
-    >a {
-        text-decoration: none;
-        color          : $fontA;
-        border         : $fontA 2px solid;
-        padding        : 15px 25px;
-        font-size      : .8em;
-        font-weight    : 200;
-
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.705);
-            box-shadow      : 2px 2px 5px $fontB;
-        }
-    }
-}
-
-#maps {
-    // display: none;
-    pointer-events: none;
-    opacity       : 0%;
-    display       : grid;
-    place-items   : center;
-}
-
-#close {
-    right           : calc(10% - .75rem);
-    top             : calc(30% - .75rem);
-    width           : 1.5rem;
-    height          : 1.5rem;
-    position        : absolute;
-    display         : flex;
-    z-index         : 4;
-    align-items     : center;
-    justify-content : center;
-    background-color: black;
-    border-radius   : 50%;
-    color           : $fontA;
-    cursor          : pointer;
-    text-decoration : none;
-    transition      : opacity .4s ease-in-out 1s;
-    opacity         : 0;
-
-
-    p {
-        text-align: center;
-        height    : 100%;
-        width     : 100%;
-        padding   : 0px 0px 2px 2px;
-    }
-}
-
-
-#bg_close {
-    position: absolute;
-    width   : 100%;
-    height  : 100%;
-    z-index : 0;
-}
-
-#maps:target>#close {
-    opacity: 1;
-}
-
-#maps:target {
-    position        : absolute;
-    height          : 100%;
-    width           : 100%;
-    background-color: $bg_colorB;
-    top             : 0px;
-    z-index         : 3;
-    row-gap         : 20px;
-    opacity         : 100%;
-    pointer-events  : auto;
-
-    .map_container {
-        animation: open 1s ease-in-out;
-        overflow : hidden;
-        width    : 80%;
-        height   : 40%;
-        z-index  : 2;
-
-    }
-}
-
-iframe {
-    width : 80vw;
-    height: 40vh;
-}
-
-p,
-a {
-    text-shadow: 1px 1px 2px $fontB;
-}
+@import "global";
+@import "color";
+@import "header";
+@import "footer";
