--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,13 +1,20 @@
 .logo {
     height: 60px;
     filter: drop-shadow(2px 2px 4px $fontB);
+    transform: scale(1);
+    transition: all .1s ease-in-out;
 }
 
+.logo:hover {
+    transform: scale(1.1);
+}
+
+
 #header {
-    padding               : 3px;
+    padding               : 4px;
     display               : grid;
     grid-auto-flow        : column;
-    background-color      : $A_color;
+    background-color      : $bg_color;
     // background-image: url(https://png.pngtree.com/background/20210714/original/pngtree-red-gradient-matte-background-picture-image_1216345.jpg);
     // box-shadow         : 5px 5px 15px $C_color;
     align-items           : center;
@@ -93,6 +100,12 @@
         }
     }
 
+}
+
+@media only screen and (min-width: 1000px) {
+    #map_link+a {
+        pointer-events: none;
+    }
 }
 
 
