--- a/css/menu.scss
+++ b/css/menu.scss
@@ -71,12 +71,20 @@ body {
 
     >label {
         padding         : 10px 0px;
-        background-color: $B_color;
+        background-color: white;
         width           : 100%;
         text-align      : center;
-        transition      : all .4s ease-in;
+        transition      : .4s ease-in;
+        transition-property: color, background-color;
         font-weight     : 600;
         font-size       : 14px;
+        cursor: pointer;
+    }
+
+    label:hover {
+        outline: 1px rgba(128, 128, 128, 0.109) solid;
+        outline-offset: -1px;
+        background-color:rgba(128, 128, 128, 0.017);
     }
 }
 
@@ -154,11 +162,14 @@ body {
 .calzone_container {
     display         : none;
     grid-auto-flow  : row;
-    background-color: $A_color;
+    background-color: white;
     position        : relative;
     max-width       : 525px;
     place-items     : center;
     font-size       : 1.2rem;
+    outline         : 2px $A_color solid;
+    outline-offset  : -2px;
+
 }
 
 .food {
@@ -275,6 +286,7 @@ h3 {
             grid-column: span 3;
         }
     }
+
     .menu_selector>label {
         font-size: 18px;
     }
