--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,7 +2,7 @@
     height: 60px;
     filter: drop-shadow(2px 2px 4px $fontB);
     transform: scale(1);
-    transition: all .1s ease-in-out;
+    transition: all .1s ease-in-outsv;
 }
 
 .logo:hover {
