--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -25,7 +25,7 @@ main {
     >img {
         object-fit     : cover;
         object-position: top center;
-        height         : 150px;
+        height         : 100%;
         width          : 100%;
     }
 
@@ -248,6 +248,13 @@ article>div:not(.youtube) {
     .staff .title {
         height: 300px;
     }
+
+    .family_hero {
+
+        height: 250px;
+    }
+
+    
 }
 
 @media only screen and (min-width: 1000px) {
@@ -259,6 +266,11 @@ article>div:not(.youtube) {
             width  : 80%;
             padding: 0px;
         }
+    }
+
+    .family_hero {
+
+        height: 300px;
     }
 
     .youtube {
