--- a/css/menu.scss
+++ b/css/menu.scss
@@ -22,6 +22,10 @@ body {
     input {
         display: none;
     }
+
+    .menu_selector {
+        width: 90%;
+    }
 }
 
 .promotional_banner {
@@ -32,6 +36,7 @@ body {
     place-items: start;
     border     : 2px $fontA solid;
     box-sizing : border-box;
+    overflow   : hidden;
 
     img {
         height         : 100%;
@@ -42,11 +47,11 @@ body {
     }
 
     h1 {
-        width      : 80%;
+        width      : 77%;
         text-shadow: 2px 2px 5px $fontB;
         color      : $fontA;
         position   : relative;
-        padding    : 25px;
+        padding    : 20px 25px;
         text-align : left;
         font-size  : calc(3vw + .9em);
     }
@@ -66,25 +71,25 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     place-items          : center;
     column-gap           : 1px;
-    width                : 100%;
     max-width            : 525px;
+    margin               : 0px 5px;
 
     >label {
-        padding         : 10px 0px;
-        background-color: white;
-        width           : 100%;
-        text-align      : center;
-        transition      : .4s ease-in;
+        padding            : 10px 2px;
+        background-color   : white;
+        width              : 95%;
+        text-align         : center;
+        transition         : .4s ease-in;
         transition-property: color, background-color;
-        font-weight     : 600;
-        font-size       : 14px;
-        cursor: pointer;
+        font-weight        : 600;
+        font-size          : 10px;
+        cursor             : pointer;
     }
 
     label:hover {
-        outline: 1px rgba(128, 128, 128, 0.109) solid;
-        outline-offset: -1px;
-        background-color:rgba(128, 128, 128, 0.017);
+        outline         : 1px rgba(128, 128, 128, 0.109) solid;
+        outline-offset  : -1px;
+        background-color: rgba(128, 128, 128, 0.017);
     }
 }
 
@@ -242,8 +247,14 @@ h3 {
 
 @media only screen and (min-width: 765px) {
 
-    .menu_selector>label {
-        font-size: 16px;
+    .menu_container>.menu_selector {
+        width: 100%;
+
+        >label {
+            font-size: 16px;
+            width    : 100%;
+            padding  : 10px 0px;
+        }
     }
 
     .appetizer_container,
@@ -276,6 +287,11 @@ h3 {
     .menu_container {
         padding: 25px;
     }
+
+    .promotional_banner h1 {
+        width: 60%;
+        padding: 15px 25px;
+    }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -289,6 +305,12 @@ h3 {
 
     .menu_selector>label {
         font-size: 18px;
+    }
+
+    .promotional_banner h1 {
+        width: 450px;
+        font-size: 37px;
+        padding: 10px 25px;
     }
 
 }
@@ -305,5 +327,9 @@ h3 {
 
     .menu_selector {
         max-width: 1200px;
+    }
+
+    .promotional_banner h1 {
+        padding: 10px calc((100vw - 1200px)/2);
     }
 }
