--- a/css/menu.css
+++ b/css/menu.css
@@ -378,8 +378,12 @@ body {
           filter: drop-shadow(2px 2px 4px black);
   -webkit-transform: scale(1);
           transform: scale(1);
-  -webkit-transition: all .1s ease-in-outsv;
-  transition: all .1s ease-in-outsv;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.logo > img {
+  height: 100%;
 }
 
 .logo:hover {
@@ -552,6 +556,16 @@ body {
   color: white;
 }
 
+.phone {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+}
+
+.phone img {
+  height: 24px;
+}
+
 #header_menu_container:target {
   opacity: 1;
   pointer-events: auto;
@@ -589,6 +603,13 @@ body {
 
 #map_link {
   display: none;
+  grid-auto-flow: column;
+}
+
+.location_pin {
+  height: 24px;
+  -ms-grid-column-align: start;
+      justify-self: start;
 }
 
 #map {
@@ -741,7 +762,107 @@ iframe {
     display: none;
   }
   #map_link {
-    display: inline;
+    display: -ms-grid;
+    display: grid;
+    justify-items: end;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  #menu_icon {
+    display: none;
+  }
+  #header_menu_container {
+    opacity: 1;
+  }
+  #header_menu_container .nav {
+    position: absolute;
+    grid-auto-flow: column;
+    top: 0px;
+    left: 55%;
+    width: 40%;
+    max-width: 600px;
+    pointer-events: auto;
+        grid-template-areas: "one two three";
+  }
+  #header_menu_container .nav > a:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: two;
+    color: #d10d0c;
+    font-weight: bold;
+  }
+  #menu_info {
+    position: absolute;
+    display: -ms-grid;
+    display: grid;
+    width: 40%;
+    max-width: 600px;
+    padding: 8px;
+    place-items: center;
+        grid-template-areas: "a b c" "a b d";
+    top: 0px;
+    right: 55%;
+    width: 40%;
+    pointer-events: auto;
+  }
+  #menu_info > p:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    grid-area: c;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    letter-spacing: normal;
+    font-weight: bold;
+  }
+  #menu_info > p:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: d;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+    letter-spacing: normal;
+    font-weight: bold;
+  }
+  #menu_info > a:nth-child(4) {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    grid-area: a;
+  }
+  #menu_info > a:nth-child(4) > p {
+    display: none;
+  }
+  #menu_info > a:nth-child(4) > img {
+    height: 55px;
+  }
+  #menu_info > a:nth-child(5) {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    grid-area: b;
+  }
+  #menu_info > a:nth-child(5) > p {
+    font-weight: bolder;
+    padding: 5px 10px;
+    margin: 0px 25px;
+    border: 2px white solid;
+    color: #d10d0c;
+  }
+  #menu_info > a:nth-child(5) > img {
+    display: none;
+  }
+  #header > a:nth-child(1) {
+    place-self: center;
+  }
+  #menu_close {
+    display: none;
+  }
+  #header_menu_container > .nav > a:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
 
