--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,13 @@ body {
 .body .address {
   text-decoration: none;
   color: white;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+}
+
+.body .address img {
+  height: 24px;
 }
 
 .logo {
@@ -598,6 +605,12 @@ footer {
   }
   .phone img {
     display: none;
+  }
+  .phone > p:nth-child(1) {
+    display: none;
+  }
+  .phone > p:nth-child(3) {
+    display: inline-block;
   }
 }
 /*# sourceMappingURL=style.css.map */
