changed spacing for prices of pizza and calzone to make it easier to read

--- a/css/menu.css
+++ b/css/menu.css
@@ -752,11 +752,6 @@ iframe {
           transition-delay: .1s;
 }
 
-#header_menu_container > .nav > a:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-}
-
 @media only screen and (min-width: 600px) {
   #map_glink {
     display: none;
@@ -1257,9 +1252,15 @@ h3 {
   .pasta h2 {
     width: 84px;
   }
-  .pizza_container .price_container,
+  .pizza_container .price_container {
+    grid-column: span 2;
+    padding: 0px 12.5%;
+    width: 74.5%;
+  }
   .calzone_container .price_container {
     grid-column: span 2;
+    padding: 0px 22%;
+    width: 56%;
   }
   .menu_selector {
     max-width: 100%;
@@ -1277,6 +1278,8 @@ h3 {
   .pizza_container .price_container,
   .calzone_container .price_container {
     grid-column: span 3;
+    width: 100%;
+    padding: 0;
   }
   .menu_selector > label {
     font-size: 18px;
