--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -7,7 +7,7 @@ main {
     display    : grid;
     row-gap    : 20px;
     place-items: center;
-    margin-top : 80px;
+    margin-top : 100px;
 
     >img:nth-child(1) {
         width: 100%;
@@ -32,7 +32,7 @@ main {
 }
 
 h3 {
-    color: $D_color;
+    color      : $D_color;
     font-weight: bolder;
 }
 
@@ -53,6 +53,10 @@ article {
     }
 }
 
+.float_image {
+    display: none;
+}
+
 article>div:not(.youtube) {
     display: grid;
     row-gap: 15px;
@@ -70,7 +74,14 @@ article>div:not(.youtube) {
     width      : 100%;
 }
 
-
+.paragraph_break {
+    display     : block;
+    margin-left : auto;
+    margin-right: auto;
+    height      : 63px;
+    width       : 100px;
+    object-fit  : cover;
+}
 
 .history_container>.bg_image_container {
     background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG);
@@ -88,45 +99,40 @@ article>div:not(.youtube) {
     background-image   : url(https://images.unsplash.com/photo-1599875953199-2b39f58d106a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=773&q=80);
     background-size    : cover;
     background-position: center;
+    margin-bottom: 30px;
 }
-
-// .staff>.bg_image_container {
-//     background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png);
-//     background-size    : cover;
-//     background-position: center;
-// }
 
 .staff {
     display         : grid;
     place-items     : center;
-    padding-top     : 20px;
+    padding-top     : 50px;
     background-color: $B_color;
 
 
     .message_left,
     .message_right {
-        background-color: $A_color;
+        background-color   : $A_color;
         // padding         : 25px;
-        
+
     }
 
     .article>div:nth-child(1),
     .message_left {
-        display: grid;
+        display    : grid;
         place-items: center;
-        width: 100%;
-        height: 100%;
+        width      : 100%;
+        height     : 100%;
     }
 
     .message_left p {
         padding: 25px 0px;
-        width: 80%;
+        width  : 80%;
     }
 
     .article>div:nth-child(1)>p {
-        padding         : 25px 0px;
-        width: 80%;
-        color: $fontA;
+        padding: 25px 0px;
+        width  : 80%;
+        color  : $fontA;
     }
 
     .message_left+.photo_carousel {
@@ -167,11 +173,8 @@ article>div:not(.youtube) {
 }
 
 .article {
-    display                 : grid;
-    // grid-template-rows: repeat(4, minmax(0, 1fr));
-    place-items             : center;
-    // padding              : 35px;
-    // row-gap              : 25px;
+    display    : grid;
+    place-items: center;
 }
 
 .photo_carousel {
@@ -180,14 +183,15 @@ article>div:not(.youtube) {
     position      : relative;
     overflow      : hidden;
     width         : 100%;
-    // height     : 80%;
-    padding-top   : 25px;
     padding-bottom: 66.25%;
+    max-height    : 333px;
 
     >img {
         position  : absolute;
         width     : 80%;
         height    : 80%;
+        max-height: 333px;
+        max-width : 500px;
         object-fit: cover;
     }
 
@@ -235,14 +239,37 @@ article>div:not(.youtube) {
         padding: 5% 25%;
     }
 
-   .staff .article>div:nth-child(1)>p {
-        padding         : 5% 25%;
-        
+    .paragraph_break {
+        display: none;
+    }
+
+    .staff .article>div:nth-child(1)>p {
+        padding: 5% 25%;
+
+    }
+
+    article:not(.kitchen_container>article) {
+        display: inline-block;
+
+        >div {
+            display: inline;
+
+        }
+    }
+
+    .float_image {
+        display: block;
+        float  : left;
+        width  : 60%;
+        padding: 10px;
+    }
+
+    .float_image:not(.history_container img) {
+        float: right;
     }
 
     article>img {
-        padding: 25px;
-        width  : 70%;
+        display: none;
     }
 
     .staff .title {
@@ -254,11 +281,12 @@ article>div:not(.youtube) {
         height: 250px;
     }
 
-    
+
 }
 
 @media only screen and (min-width: 1000px) {
     article {
+        display              : grid;
         grid-template-columns: 1fr 1fr;
         padding              : 50px;
 
@@ -266,6 +294,22 @@ article>div:not(.youtube) {
             width  : 80%;
             padding: 0px;
         }
+    }
+
+    article:not(.kitchen_container>article) {
+        display: grid;
+    }
+
+    main>div {
+        display: grid;
+    }
+
+    .float_image {
+        display: none;
+    }
+
+    article>img {
+        display: inline-block;
     }
 
     .family_hero {
@@ -282,17 +326,21 @@ article>div:not(.youtube) {
         grid-template-columns: 1fr 1fr;
 
         p {
-            padding: 65px;
-            width: 80%;
+            padding     : 65px;
+            width       : 75%;
+            justify-self: start;
         }
 
-        .article>div:nth-child(1)>p {
-            padding         : 65px;
-            width: 80%;
+        >div:nth-child(1)>p {
+            padding     : 65px;
+            width       : 75%;
+            justify-self: end;
         }
 
         .photo_carousel {
-            width: 100%;
+            width        : 100%;
+            padding-left : auto;
+            padding-right: auto;
         }
     }
 
@@ -301,21 +349,21 @@ article>div:not(.youtube) {
     }
 
     .staff .message_right {
-        display: grid;
+        display    : grid;
         place-items: center;
-        width: 100%;
-        height: 100%;
-        padding: 0px;
+        width      : 100%;
+        height     : 100%;
+        padding    : 0px;
     }
 
     .article>div:nth-child(1)>p {
         text-align: right;
     }
 
-   .message_left+.photo_carousel {
-       width: 100%;
-    //    height: 100%;
-   }
+    .message_left+.photo_carousel {
+        width: 100%;
+        padding-top: 20px;
+    }
 
     main>div {
         position: relative;
